# WASM-Audio-Test

./: AudioProcessor.h  AudioWorklet.cpp  AudioWorklet.js  AudioWorklet.wasm  CMakeLists.txt  README.md  build-svelte.sh  build.sh  build_clap.sh  build_wasm.sh  compile_commands.json  index.html
framework/xylo_audio/: AudioBuffer.cpp  AudioBuffer.h  AudioCore.h  AudioMath.h  AudioParameter.cpp  AudioParameter.h
framework/xylo_core/: Debug.h  SmallVector.h
framework/xylo_dsp/: ADSRProcessor.cpp  ADSRProcessor.h  GainProcessor.cpp  GainProcessor.h
framework/xylo_midi/: MidiEvent.cpp  MidiEvent.h  MidiView.cpp  MidiView.h
framework/xylo_text/: ParameterText.cpp  ParameterText.h
framework/xylo_web_audio/: AudioProcessorWeb.cpp  AudioProcessorWeb.h  AudioWorklet.cpp  WebAudio.cpp  WebAudio.h  WebMidi.cpp  WebMidi.h
frontend/: index.html  package-lock.json  tsconfig.app.json
frontend/src/: App.svelte  app.css  emscripten-globals.d.ts  main.ts
server/: AudioWorklet.js  AudioWorklet.wasm  index.html  midi.js  midi_buffer.js  server.js
server-svelte/: index.html
server-svelte/assets/: index-2NjlJC-O.js  index-B6-e-iMy.js  index-BH61n1YA.js  index-Bc8wugQP.js  index-BdS01zOf.js  index-Bfbne9h8.js  index-BnKemW0Z.css  index-BtHGI50j.js  index-CFgQ2-1I.js  index-CMlUWJ4k.js  index-CcC1fuXh.js  index-D4yQeeDp.js  index-DMrDQwk7.js  index-DQUV3ZaU.js  index-DaGE-0jX.js  index-TJGvWvg_.js  index-TOWJXQOr.js  index-qaQrSRow.js  index-zbdAp5mk.js
server-svelte/wasm/: AudioWorklet.js  AudioWorklet.wasm
src/: Array.hh  AudioBuffer.h  AudioParameter.cpp  AudioParameter.h  AudioProcessor.cpp  AudioProcessor.h  AudioWorklet.cpp  ClapEntry.cpp  ClapPluginType.hh  Info.plist.in  Mutex.hh  Plugin.hh  Synthle.cc  Synthle.hh  index.html  index.html.h  index2.html
src/Audio/: AudioBuffer.cpp  AudioBuffer.h  AudioCore.h  AudioParameter.cpp  AudioParameter.h
src/CLAP/: Gui.hh  Gui.mm
src/Dsp/: GainProcessor.h
src/Midi/: MidiEvent.cpp  MidiEvent.h  MidiView.cpp  MidiView.h
src/Synth/: NoteVector.h  SineOscillator.cpp  SineOscillator.h  SynthProcessor.cpp  SynthProcessor.h  SynthVoice.cpp  SynthVoice.h
src/WebAudio/: AudioProcessorWeb.cpp  AudioProcessorWeb.h  AudioWorklet.cpp  WebAudio.cpp  WebAudio.h  WebMidi.cpp  WebMidi.h
src/synth/: SynthProcessor.cpp  (+1 more)
(+5 files in other folders)
